--- a/sms-platform-cache/src/main/resources/application-dev.yml
+++ b/sms-platform-cache/src/main/resources/application-dev.yml
@@ -7,13 +7,15 @@ eureka:
 # Redis数据库索引（默认为0）
 spring:
   redis:
-    database: 0
+    database: 11
     # Redis服务器地址
-    host: redis.qfjava.cn
+    #host: redis.qfjava.cn
+    host: 10.9.21.3
     #集群连接示例
     #spring.redis.cluster.nodes=192.168.157.135:7000,192.168.157.135:7001,192.168.157.135:7002,192.168.157.135:7003,192.168.157.135:7004,192.168.157.135:7005
     # Redis服务器连接端口
-    port: 8400
+    #port: 8400
+    port: 6379
     # Lettuce
     # 连接池最大连接数（使用负值表示没有限制）
     lettuce:
@@ -27,4 +29,4 @@ spring:
         min-idle: 0
       # 关闭超时时间
       shutdown-timeout: 100
-    password: redis001
+    #password: redis001
