--- a/sms-platform-webmaster/src/main/resources/application-local.properties
+++ b/sms-platform-webmaster/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/sms_plaform?useSSL=false&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=s905538994
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 eureka.client.serviceUrl.defaultZone=http://admin:123456@localhost:8000/eureka/
 
