--- a/sms-platform-cache/pom.xml
+++ b/sms-platform-cache/pom.xml
@@ -83,6 +83,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.qianfeng.smsplatform</groupId>
+            <artifactId>sms-platform-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
