--- a/sms-platform-webmaster/src/main/resources/application-local.properties
+++ b/sms-platform-webmaster/src/main/resources/application-local.properties
@@ -5,9 +5,10 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 eureka.client.serviceUrl.defaultZone=http://admin:123456@localhost:8000/eureka/
 
 # rabbitMQ配置信息
-spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.host=49.233.188.114
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=nine
+spring.rabbitmq.password=123
+spring.rabbitmq.virtual-host=/test
 
 server.port=8083
