--- a/sms-platform-cache/pom.xml
+++ b/sms-platform-cache/pom.xml
@@ -88,6 +88,10 @@
             <artifactId>sms-platform-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
