--- a/sms-platform-search/src/main/resources/application-dev.properties
+++ b/sms-platform-search/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ spring.data.elasticsearch.connectionRequestTimeOut=500
 spring.data.elasticsearch.maxConnectNum=100
 spring.data.elasticsearch.maxConnectPerRoute=100
 # rabbitMQ\u914D\u7F6E\u4FE1\u606F
-spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.host=10.9.21.3
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
