--- a/sms-platform-search/src/main/resources/application-local.properties
+++ b/sms-platform-search/src/main/resources/application-local.properties
@@ -2,9 +2,9 @@
 eureka.client.service-url.defaultZone:http://admin:123456@localhost:8000/eureka/
 
 #es 配置信息
-elasticsearch.index.name=sms_submit_log
-elasticsearch.index.type=sms_submit_log_type
-spring.data.elasticsearch.host=101.201.236.229 
+elasticsearch.index.name=eleven_sms_submit_log
+elasticsearch.index.type=eleven_sms_submit_log_type
+spring.data.elasticsearch.host=10.9.21.3
 spring.data.elasticsearch.port=9200
 spring.data.elasticsearch.connectTimeOut=1000
 spring.data.elasticsearch.socketTimeOut=30000
@@ -12,7 +12,7 @@ spring.data.elasticsearch.connectionRequestTimeOut=500
 spring.data.elasticsearch.maxConnectNum=100
 spring.data.elasticsearch.maxConnectPerRoute=100
 # rabbitMQ配置信息
-spring.rabbitmq.host=127.0.0.1
+spring.rabbitmq.host=10.9.21.3
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
