--- a/sms-platform-search/pom.xml
+++ b/sms-platform-search/pom.xml
@@ -73,7 +73,10 @@
             <artifactId>sms-platform-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <finalName>sms-platform-search</finalName>
