--- a/sms-platform-search/src/main/resources/application-local.properties
+++ b/sms-platform-search/src/main/resources/application-local.properties
@@ -2,8 +2,10 @@
 eureka.client.service-url.defaultZone:http://admin:123456@localhost:8000/eureka/
 
 #es 配置信息
-elasticsearch.index.name=eleven_sms_submit_log
-elasticsearch.index.type=eleven_sms_submit_log_type
+elasticsearch.index.submit.name=eleven_sms_submit_log
+elasticsearch.index.submit.type=eleven_sms_submit_log_type
+elasticsearch.index.report.name=eleven_sms_report_log
+elasticsearch.index.report.type=eleven_sms_report_log_type
 spring.data.elasticsearch.host=10.9.21.3
 spring.data.elasticsearch.port=9200
 spring.data.elasticsearch.connectTimeOut=1000
@@ -16,3 +18,4 @@ spring.rabbitmq.host=10.9.21.3
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=admin
+spring.rabbitmq.virtual-host=my_vhost
