--- a/sms-platform-monitor/src/main/resources/application.yml
+++ b/sms-platform-monitor/src/main/resources/application.yml
@@ -10,7 +10,7 @@ monitorQueueSizeJob:
   shardingItemParameters: null
 monitorFeeJob:
   #cron表达式，用于控制作业触发时间
-  cron: 0/10 * * * * ?
+  cron: 0 0 9 * * ?
   #作业分片总数
   shardingTotalCount: 1
   shardingItemParameters: null
