--- a/sms-platform-webmaster/src/main/resources/application-local.properties
+++ b/sms-platform-webmaster/src/main/resources/application-local.properties
@@ -5,10 +5,10 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 eureka.client.serviceUrl.defaultZone=http://admin:123456@localhost:8000/eureka/
 
 # rabbitMQ配置信息
-spring.rabbitmq.host=49.233.188.114
+spring.rabbitmq.host=10.9.21.3
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=nine
-spring.rabbitmq.password=123
-spring.rabbitmq.virtual-host=/test
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+spring.rabbitmq.virtual-host=my_vhost
 
 server.port=8083
