--- a/sms-platform-monitor/src/main/resources/application.yml
+++ b/sms-platform-monitor/src/main/resources/application.yml
@@ -10,11 +10,11 @@ monitorQueueSizeJob:
   shardingItemParameters: null
 monitorFeeJob:
   #cron表达式，用于控制作业触发时间
-  cron: 0 0 9 * * ?
+  cron: 0 0/5 * * * ?
   #作业分片总数
   shardingTotalCount: 1
   shardingItemParameters: null
-
+# 0 0 9 * * ?
 #报警参数
 alert:
   gatewayQueue:
