--- a/sms-platform-monitor/pom.xml
+++ b/sms-platform-monitor/pom.xml
@@ -65,6 +65,12 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.1.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
