--- a/sms-platform-monitor/src/main/resources/application.yml
+++ b/sms-platform-monitor/src/main/resources/application.yml
@@ -15,6 +15,15 @@ monitorFeeJob:
   shardingTotalCount: 1
   shardingItemParameters: null
 # 0 0 9 * * ?
+
+monitorReportFailure:
+  #cron表达式，用于控制作业触发时间
+  cron: 0/5 * * * * ?
+  #作业分片总数
+  shardingTotalCount: 1
+  shardingItemParameters: null
+
+
 #报警参数
 alert:
   gatewayQueue:
