完善策略模块

--- a/sms-platform-gateway/src/main/resources/application-local.yml
+++ b/sms-platform-gateway/src/main/resources/application-local.yml
@@ -1,7 +1,8 @@
 # rabbitMQ配置信息
 spring:
   rabbitmq:
-    host: 127.0.0.1
+    host: 10.9.21.3
     port: 5672
-    username: guest
-    password: guest
+    username: admin
+    password: admin
+    virtual-host: my_vhost
