--- a/sms-platform-monitor/src/main/resources/application-local.yml
+++ b/sms-platform-monitor/src/main/resources/application-local.yml
@@ -1,7 +1,7 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://admin:123456@localhost:8000/eureka/
+      defaultZone: http://admin:123456@10.9.21.228:8000/eureka/
 #zookeeper注册中心配置
 regCenter:
   #zookeeper注册中心IP与端口列表
