--- a/sms-platform-webmaster/src/main/resources/application-local.properties
+++ b/sms-platform-webmaster/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sms_platform?useSSL=false&characterEncoding=utf-8&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/sms_plaform?useSSL=false&characterEncoding=utf-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
