--- a/sms-platform-interface/src/main/resources/application-local.yml
+++ b/sms-platform-interface/src/main/resources/application-local.yml
@@ -4,7 +4,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://admin:123456@localhost:8000/eureka/
+      defaultZone: http://admin:123456@10.9.21.228:8000/eureka/
 #10.9.21.228
 #rabbitMQ配置信息
 spring:
