--- a/sms-platform-search/src/main/resources/application-local.properties
+++ b/sms-platform-search/src/main/resources/application-local.properties
@@ -1,5 +1,5 @@
 ﻿server.port=8085
-eureka.client.service-url.defaultZone:http://admin:123456@localhost:8000/eureka/
+eureka.client.service-url.defaultZone:http://admin:123456@10.9.21.228:8000/eureka/
 
 #es 配置信息
 elasticsearch.index.submit.name=eleven_sms_submit_log
