--- a/sms-platform-webmaster/src/main/resources/application-local.properties
+++ b/sms-platform-webmaster/src/main/resources/application-local.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sms_plaform?useSSL=false&chara
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-eureka.client.serviceUrl.defaultZone=http://admin:123456@10.9.21.228:8000/eureka/
+eureka.client.serviceUrl.defaultZone=http://admin:123456@localhost:8000/eureka/
 
 # rabbitMQ配置信息
 spring.rabbitmq.host=10.9.21.3
